# bazel_python_directory_conflict

./: README.md  WORKSPACE  rospkg.BUILD
src/python/lib/: BUILD.bazel
src/python/main/: BUILD.bazel  main.py  main_with_imports.py
